# advent_of_code_2022

./: pyproject.toml
advent_of_code_2022/: data_6.txt  main.ipynb
